--- a/vignettes/baseqtl.Rmd
+++ b/vignettes/baseqtl.Rmd
@@ -368,7 +368,7 @@ out <- tempdir()
 baseqtl.gt.paired(
     gene = "ENSG00000159958",
     chr = 22,
-    snps = 10^4,
+    snps = 10^3,
     counts.f = counts.f,
     covariates = covariates,
     e.snps = e.snps,
@@ -378,6 +378,7 @@ baseqtl.gt.paired(
     le.file = le.file,
     h.file = h.file,
     out = out,
+    inference.method = "vb",
     AI_estimate = AI_estimate
 )
 ```
@@ -465,7 +466,7 @@ out <- tempdir()
 baseqtl2T.nogt(
     gene = "ENSG00000178372",
     chr = 10,
-    snps = 10^4,
+    snps = 10^3,
     counts.f = counts.f,
     covariates = covariates,
     e.snps = e.snps,
@@ -477,6 +478,7 @@ baseqtl2T.nogt(
     h.file = h.file,
     out = out,
     treatment = c("Psoriasis_skin", "normal_skin"),
+    inference.method = "vb",
     AI_estimate = AI_estimate
 )
 ```
